--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>My canvas projetcs</h1>
     <ul>
         <li>
-            <a href="./PremierTest/">Bouboules</a>
+            <a href="./PremierTest/index.html">Bouboules</a>
         </li>
     </ul>
 </body>
