Other Colors and range bar

--- a/paint/index.html
+++ b/paint/index.html
@@ -10,13 +10,29 @@
 <body>
     <canvas></canvas>
         <div id='colorContainer'>
+            <div class="colorBox" value="white"></div>
+            <div class="colorBox" value="silver"></div>
+            <div class="colorBox" value="gray"></div>
+            <div class="colorBox" value="black"></div>
             <div class="colorBox" value="red"></div>
+            <div class="colorBox" value="maroon"></div>
+            <div class="colorBox" value="yellow"></div>
+            <div class="colorBox" value="olive"></div>
+            <div class="colorBox" value="lime"></div>
             <div class="colorBox" value="green"></div>
+            <div class="colorBox" value="aqua"></div>
+            <div class="colorBox" value="teal"></div>
             <div class="colorBox" value="blue"></div>
-            <input type="number" name="lineWidth" id="lineWidth" value="1">
+            <div class="colorBox" value="navy"></div>
+            <div class="colorBox" value="fuchsia"></div>
+            <div class="colorBox" value="purple"></div>
             <img src="./trash.png" alt="Clear">
+            <input type="range" name="points" min="1" max="50" id="lineWidth" placeholder="80">
+            <div id="lineWidthInfo"></div>
         </div>
 
     <script src="./script.js"></script>
 </body>
 </html>
+
+
