--- a/myTileMap/index.html
+++ b/myTileMap/index.html
@@ -8,7 +8,8 @@
     <title>Tile map mien</title>
 </head>
 <body>
-    <canvas></canvas>
+    <canvas id="canvas"></canvas>
+    <canvas class="canvas2"></canvas>
     <script type="module" src="./js/app.js"></script>
 </body>
 </html>
