bouton save ajouter sur le paint

--- a/paint/index.html
+++ b/paint/index.html
@@ -29,6 +29,7 @@
             <img src="./trash.png" alt="Clear">
             <input type="range" name="points" min="1" max="50" id="lineWidth" placeholder="80">
             <div id="lineWidthInfo"></div>
+            <button class="save">Save</button>
         </div>
 
     <script src="./script.js"></script>
