--- a/myTileMap/index.html
+++ b/myTileMap/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <canvas class="canvas2"></canvas>
+    <div class="inventory">
+        
+    </div>
     <script type="module" src="./js/app.js"></script>
 </body>
 </html>
