--- a/VectorCurse/index.html
+++ b/VectorCurse/index.html
@@ -9,6 +9,6 @@
 <body>
     <canvas></canvas>
 
-    <script src="./script.js"></script>
+    <script src="./build/app.js"></script>
 </body>
 </html>
