--- a/Boids/index.html
+++ b/Boids/index.html
@@ -34,7 +34,7 @@
         
     </div>
 
-    <script src="./boid.js"></script> 
-    <script src="./sketch.js"></script>
+    <script src="./boid.js" async></script> 
+    <script src="./sketch.js" async></script>
 </body>
 </html>
