sketch moved 'boids'

--- a/Boids/index.html
+++ b/Boids/index.html
@@ -35,6 +35,6 @@
     </div>
 
     <script src="./boid.js" async></script> 
-    <script src="./sketch.js" async></script>
+    <!-- <script src="./sketch.js" async></script> -->
 </body>
 </html>
