--- a/Raycast/index.html
+++ b/Raycast/index.html
@@ -17,6 +17,7 @@
     <canvas></canvas>
 
     <script src="./utils.js" defer></script>
+    <script src="./class.js" defer></script>
     <script src="./app.js" defer></script>
 </body>
 </html>
